--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Recipe Box</title>
   </head>
   <body>
